update the person info

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ div.desc {
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;
-                    <span class="glyphicon glyphicon-phone-alt" style="margin-left: -36px"><span style="font-size:16px;">手机：13142332483</span></span>
+                    <span class="glyphicon glyphicon-phone-alt" style="margin-left: -36px"><span style="font-size:16px;">手机：暂无</span></span>
                     <span class="glyphicon glyphicon-envelope" style="margin-left: 32px"><span style="font-size: 16px;">邮箱：wmcjob@163.com</span></span> 
 				</p>
 				</br>
@@ -544,11 +544,11 @@ div.desc {
 		    <dl style="font-size: 16px">
 
 				<dt>
-					2015.04 - 至今	南华大学计算机科学与技术学院软件协会	技术部成员
+					2015.04 - 至今	计算机科学与技术学院软件协会	技术部成员
 				</dt>
 				</br>
 				<dd>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.在校期间，参与ACM程序设计，受邀参加《衡阳师范大学ACM邀请赛》，排名前35%。
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.在校期间，参与ACM程序设计，受邀参加大学城ACM邀请赛，排名前35%。
 				</dd>
 			</dl>
 			</br>
