--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ div.desc {
 				<div class="navbar-header">
                     <!--button-->
 					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
-					 <a class="navbar-brand" href="index.html">汪明城(jettle-乔特)</a>
+					 <a class="navbar-brand" href="index.html">汪明城</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -579,7 +579,7 @@ div.desc {
     	<h2>实习经历|In<span>ter</span>ns<span>hi</span>p ex<span>per</span>ie<span>nc</span>e</br><span>___</span></h2>
     	</br>
     	</br>
-        <h4>2017.10.23-2018.02.25&nbsp;&nbsp;衡阳镭目科技有限责任公司&nbsp;&nbsp;实习Java开发工程师</h4>
+        <h4>2017.10.23-2018.02.25&nbsp;&nbsp;衡阳镭目科技有限责任公司&nbsp;&nbsp;实习软件工程师</h4>
         </br>
         <p>1.项目名称：</p>
         <P>
