--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ div.desc {
 							  <a href="#" class="dropdown-toggle" data-toggle="dropdown">实习经历<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#practices">2017.10.23-2018.02.25   衡阳镭目科技有限责任公司   实习Java开发工程师</a>
+									 <a href="#practices">2017.10.23-2018.02.25   衡阳镭目科技有限责任公司   实习软件工程师</a>
 								</li>
 								<li>
 									 <a href="#practices">2017.06.20-2017.06.30   湖南软评信息技术有限公司   Java开发工程师</a>
