update the index.html of some key-value
time:2020.01.06

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ div.desc {
 				<div class="navbar-header">
                     <!--button-->
 					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
-					 <a class="navbar-brand" href="index.html">汪明城</a>
+					 <a class="navbar-brand" href="index.html">Jettle</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -174,7 +174,7 @@ div.desc {
 									 <a href="#campus">2.《“乐易考杯”湖南省“互联网+”大学生就业创业大赛》</a>
 								</li>
 								<li>
-									 <a href="#campus">3.《衡阳师范大学ACM邀请赛》</a>
+									 <a href="#campus">3.《师大ACM邀请赛》</a>
 								</li>
 								<li class="divider">
 								</li>
@@ -187,10 +187,10 @@ div.desc {
 							  <a href="#" class="dropdown-toggle" data-toggle="dropdown">实习经历<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#practices">2017.10.23-2018.02.25   衡阳镭目科技有限责任公司   实习软件工程师</a>
+									 <a href="#practices">2017.10.23-2018.02.25   xxx科技有限责任公司   实习软件工程师</a>
 								</li>
 								<li>
-									 <a href="#practices">2017.06.20-2017.06.30   湖南软评信息技术有限公司   Java开发工程师</a>
+									 <a href="#practices">2017.06.20-2017.06.30   xxx信息技术有限公司   Java开发工程师</a>
 								</li>
 						    </ul>
 						</li>
@@ -226,7 +226,7 @@ div.desc {
 									 <a href="#awards"> 2. 2016.10 - 2017.03《2016年软件设计创意大赛》 优胜奖</a>
 								</li>
 								<li>
-									 <a href="#awards">3. 2016.06 - 2016.12《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》
+									 <a href="#awards">3. 2016.06 - 2016.12《第七届“挑战杯”大学生课外学术科技作品竞赛》
 			                    院三等奖 </a>
 								</li>
 							</ul>
@@ -338,7 +338,7 @@ div.desc {
 								《个人受骗几率检测小程序》
 							</h4>
 							<p id="small-text">
-								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在参加《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》的过程中，我们研究的课题是“大学生对诈骗的判断意识和受骗几率的调查与对策分析”，基于大量的问卷调查，因此，“个人受骗几率检测小程序”则是在以上背景下开发的，此小程序需要被测者填写一份简短的调查内容，然后程序已经被测者的“数据”与问卷调查数据库中的“数据”对比，继而计算出此位被测者的受骗概率。 
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在参加《第七届“挑战杯”大学生课外学术科技作品竞赛》的过程中，我们研究的课题是“大学生对诈骗的判断意识和受骗几率的调查与对策分析”，基于大量的问卷调查，因此，“个人受骗几率检测小程序”则是在以上背景下开发的，此小程序需要被测者填写一份简短的调查内容，然后程序已经被测者的“数据”与问卷调查数据库中的“数据”对比，继而计算出此位被测者的受骗概率。 
 							</p>
 						</div>
 					</div>
@@ -366,21 +366,21 @@ div.desc {
 		<div class="col-md-12 column" id="info" >
 			<div class="jumbotron"  style="background-color: #ffffff">
 				<h3>
-					汪明城|<span style="font-size:14px">英文：jettle</span>
+					Jettle|<span style="font-size:14px">英文：jettle</span>
 				</h3>
 				<p>
 				    男 本科 | 应届生</br></br>
-				    <span class="glyphicon glyphicon-bookmark"><span style="font-size: 16px">求职岗位：前端工程师/Java工程师</span></span> 
+				    <span class="glyphicon glyphicon-bookmark"><span style="font-size: 16px">求职岗位：Web开发工程师</span></span> 
                     
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span class="glyphicon glyphicon-map-marker"><span style="font-size: 16px">工作地点：公司安排</span></span> 
+                    <span class="glyphicon glyphicon-map-marker"><span style="font-size: 16px">工作地点：notings</span></span> 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span class="glyphicon glyphicon-book"><span style="font-size: 16px">教育程度：2014.09-2018.06 4年制 本科教育</span></span> 
+                    <span class="glyphicon glyphicon-book"><span style="font-size: 16px">教育程度：4 year</span></span> 
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <span class="glyphicon glyphicon-tag"><span style="font-size:16px">英语水平：CET-4</span></span>
                     </br>
                     </br>
-                    <span class="glyphicon glyphicon-send"><span style="font-size:16px">政治面貌：中共党员</span></span>
+                    <span class="glyphicon glyphicon-send"><span style="font-size:16px">政治面貌：Communist Party members</span></span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -510,11 +510,11 @@ div.desc {
 			<dl style="font-size: 16px">
 			</br>
 				<dt>
-					2015.04 - 2015.05	衡阳中兴网信科技有限公司	Java见习生
+					2015.04 - 2015.05	中兴网信科技有限公司	实习生
 				</dt> 
 				</br>
 				<dd>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.了解了“衡阳中兴网信科技有限公司”研发部现有项目及工作内容，参加了《“中兴杯”App创意作品大赛》，并获取了一个共同运营校园App-“校青葱”的机会。
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.了解了“中兴网信科技有限公司”研发部现有项目及工作内容，参加了《“中兴杯”App创意作品大赛》，并获取了一个共同运营校园App-“校青葱”的机会。
 				</dd>
 		    </dl>
 		    <a href="views/zte.html">了解更多</a>
@@ -579,7 +579,7 @@ div.desc {
     	<h2>实习经历|In<span>ter</span>ns<span>hi</span>p ex<span>per</span>ie<span>nc</span>e</br><span>___</span></h2>
     	</br>
     	</br>
-        <h4>2017.10.23-2018.02.25&nbsp;&nbsp;衡阳镭目科技有限责任公司&nbsp;&nbsp;实习软件工程师</h4>
+        <h4>2017.10.23-2018.02.25&nbsp;&nbsp;xxx科技有限责任公司&nbsp;&nbsp;实习软件工程师</h4>
         </br>
         <p>1.项目名称：</p>
         <P>
@@ -816,7 +816,7 @@ div.desc {
 						<div class="modal-header">
 							 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 							<h4 class="modal-title" id="myModalLabel">
-								《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》院三等奖
+								《第七届“挑战杯”大学生课外学术科技作品竞赛》院三等奖
 							</h4>
 						</div>
 						<div class="modal-body">
@@ -890,10 +890,10 @@ div.desc {
   <div class="footer-nav">
     <ul class="footer-content">
       <li>
-         <a href="#"><span class="glyphicon glyphicon-envelope"></span> 邮编：421001</a>
+         <a href="#"><span class="glyphicon glyphicon-envelope"></span> 邮编：Nothing</a>
       </li>
       <li>
-         <a href="#"><span class="glyphicon glyphicon-map-marker"></span> 地址：湖南省衡阳市蒸湘区</a>
+         <a href="#"><span class="glyphicon glyphicon-map-marker"></span> 地址：Hunan, China/</a>
       </li>
       <li>
          <a id="weibo" href="#"><span class="glyphicon glyphicon-qrcode"></span> Github</a>
