delete some key-value
20200106

--- a/index.html
+++ b/index.html
@@ -291,19 +291,6 @@ div.desc {
 						</div>
 					</div>
 					<div class="item">
-					<a href="views/csxy.html">
-                        <img alt="1" src="images/csxy2.jpg" />
-                        </a>
-						<div class="carousel-caption">
-							<h4>
-								《考生录取专业确认系统》
-							</h4>
-							<p>
-								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;此系统的实现，可以使湖南考生实现网上更换和确认专业信息，同时方便老师在线管理；由于部分考生虽然投档至我校，但其可能出于各种原因（如：错投、调剂不满意、家庭变故等等），考生不能到校就读，以往的方式是分工分批拨打考生电话，来确认考生是否就读我校，而此系统则是优化招生方式，减少人力资源的投入，以考生的网站操作为依据，来确认考生的就读意愿，此项目已成功部署运营，并圆满完成了2017年8月份的招生任务。
-							</p>
-						</div>
-					</div>
-					<div class="item">
 						<a href="views/usc.html">
 						<img alt="2" src="images/usc2.jpg" />
 						</a>
@@ -634,8 +621,6 @@ div.desc {
         </p>
         </br>
         </br>
-        <img src="images/ramon.PNG">
-        <p>（*注：公司地址:	湖南省衡阳市华新开发区芙蓉路21号）</p>
     </div>
     </div>
     </div>
@@ -643,7 +628,7 @@ div.desc {
 	<div class="col-md-12 column">
     <div style="margin-bottom: 50px">
     	</br>
-        <h4>2017.06.20-2017.06.30&nbsp;&nbsp;湖南软评信息技术有限公司&nbsp;&nbsp;Java开发工程师</h4>
+        <h4>2017.06.20-2017.06.30&nbsp;&nbsp;xxx信息技术有限公司&nbsp;&nbsp;Java开发工程师</h4>
         </br>
         <p>1.项目名称：</p>
         <p>
@@ -672,8 +657,6 @@ div.desc {
         </p>
         </br>
         </br>
-        <img src="images/soft.PNG">
-        <p>（*注：公司地址:	湖南省长沙市芙蓉区朝阳街街道解放东路51号湖南省电子产品检测）</p>
     </div>
     </div>
     </div>
@@ -725,7 +708,7 @@ div.desc {
 		<div class="responsive">
 		  <div class="img">
 		    <a target="_blank" href="views/csxy.html">
-		      <img src="images/csxy.PNG" alt="Northern Lights" width="600" height="400">
+		      <img src="" alt="Northern Lights" width="600" height="400">
 		    </a>
 		    <div class="desc" style="padding-top: 55px;height: 256px">1.在团队的协作下，《考生录取专业确认系统》基于Spring MVC+Mybatis+Spring框架开发，所以主要负责的是编写Dao的数据逻辑接口，使用Mybatis的动态SQL,通过配置文件来操作Mysql数据库，实现了基本的增/删/改/查，同时减少了代码的冗余。
 		    <a class="btn" href="views/csxy.html" style="padding-top: 30px">2017.07 - 2017.08</a> <a class="btn btn-link" href="views/csxy.html" style="padding-top:30px">Java工程师</a>
