delete some person informations

--- a/index.html
+++ b/index.html
@@ -356,7 +356,6 @@ div.desc {
 					Jettle|<span style="font-size:14px">英文：jettle</span>
 				</h3>
 				<p>
-				    男 本科 | 应届生</br></br>
 				    <span class="glyphicon glyphicon-bookmark"><span style="font-size: 16px">求职岗位：Web开发工程师</span></span> 
                     
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -492,7 +491,7 @@ div.desc {
 		</br>
 		<div class="col-md-3 column">
 		    <div class="icon">
-			     <img src="images/ZTE.PNG" style="padding-left: 7%;padding-top: 25px;">
+			     <img src="" style="padding-left: 7%;padding-top: 25px;">
 			</div>
 			<dl style="font-size: 16px">
 			</br>
